Fixed text wrap for title on mobile. Fixed the floating footer and added padding for ease of viewing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@
     font-size: 16px;
 }
 .company-name {
-	display: inline;
+	display: inline-block;
 	font-family: 'Menlo Regular';
 }
 .company-name.header {
